# boy

./: .clangd  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  test.sh  todo.txt
.cache/clangd/index/: cpu-test.h.0A1DD2A083ABCFDC.idx  cpu.c.E51DC3D79F4681BF.idx  cpu.h.316B1A04B701178F.idx  gb_mem.c.622A720B2D463B0F.idx  gb_mem.h.A1BE5AAB77FDC063.idx  gbcore.c.F91891AA62A7AEAD.idx  instructions.cpp.5D8ADCAEF3AC0350.idx  instructions.h.CD39996724DBF02D.idx  main.cpp.0E2B678BBBE55682.idx  memory.h.FE97D88B385C733C.idx
.zed/: debug.json  settings.json  tasks.json
docs/: ppu.md
src/: boy.c  boy.h  cartridge.h  common.h  cpu.c  cpu.h  cpu_utils.c  debug.h  gb_mem.c  gb_mem.h  gbcore.c  instructions.h  main.c  memory.h  mmu.c  mmu.h  ppu.c  ppu.h  ppu_queue.c  ppu_queue.h  test.c  test.h  timer.c  timer.h  utils.h
test/cpu/: cpu-test.h  instructions.cpp
